--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ Oleo Script
 
 body {
   margin: 0;
-  padding-top: 80px;
+
   font-family: var(--font-main);
   font-style: normal;
 }
@@ -49,6 +49,7 @@ header {
 
 header .link-padding {
   padding: 32px 0;
+  min-height: 80px;
 }
 
 .link-color {
@@ -548,9 +549,6 @@ button:focus {
 .text-action:hover {
   opacity: 1;
 }
-
-!!!!!!!!!!!!
-
 
 /* .cards-bcg:hover {
   content: " ";
