--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,29 @@ header .link-padding {
   color: var(--font-second-color);
 }
 
+.link-underline {
+  position: relative;
+  padding: 0;
+}
+
+.link-underline::after {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: var(--font-second-color);
+  border-radius: 2px;
+  opacity: 0;
+}
+
+.link-underline:after {
+  opacity: 1;
+}
+
 .list-margin-style:not(:last-child) {
   margin-right: 50px;
 }
