--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,7 @@ h2 {
 }
 
 .backdrop.is-hidden {
-  opacity: 0;
+  opacity: 1;
   pointer-events: none;
 }
 
@@ -366,15 +366,28 @@ h2 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 2;
 
-  min-width: 528px;
+  width: 528px;
   min-height: 581px;
-  padding: 15px;
+  /* margin: 221px 528px; */
 
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 /* ===== /Герой ===== */
@@ -558,8 +571,9 @@ button:focus {
   padding: 20px 24px 20px 24px;
 }
 
-.flex-style {
+/* .flex-style {
   position: relative;
+  overflow: hidden;
 }
 
 .flex-style::before {
@@ -596,6 +610,28 @@ button:focus {
 
 .text-action:hover {
   opacity: 1;
+} */
+
+.flex-style {
+  position: relative;
+}
+
+.overlay {
+  width: 100%;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+  top: 0;
+  opacity: 0;
+}
+
+.flex-hover:hover .overlay {
+  opacity: 1;
+}
+
+.cards .text-action-style {
+  color: #ffffff;
+  padding: 63px 24px;
 }
 
 .cards-style p {
