--- a/css/styles.css
+++ b/css/styles.css
@@ -206,6 +206,8 @@ h2 {
 .header a:active,
 .header a:focus {
   color: var(--font-second-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .a-font-color-dark {
@@ -301,6 +303,8 @@ h2 {
 .contacts-hover a:active,
 .contacts-hover a:focus {
   color: var(--font-second-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email-icon {
@@ -354,18 +358,25 @@ h2 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
-  opacity: 1;
+  opacity: 0;
   pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
 }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+
   z-index: 2;
 
   width: 528px;
@@ -376,6 +387,9 @@ h2 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close {
@@ -520,6 +534,8 @@ h2 {
 
 .cards .radio-button:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-padding {
@@ -541,6 +557,8 @@ button:hover,
 button:focus {
   background-color: var(--font-second-color);
   color: white;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ===== Портфолио карточки ===== */
@@ -571,11 +589,11 @@ button:focus {
   padding: 20px 24px 20px 24px;
 }
 
-/* .flex-style {
+.flex-style {
   position: relative;
   overflow: hidden;
 }
-
+/*
 .flex-style::before {
   display: inline-block;
   position: absolute;
@@ -619,14 +637,30 @@ button:focus {
 .overlay {
   width: 100%;
   height: 294px;
+  /* padding: 63px 24px; */
   background-color: rgba(33, 150, 243, 0.9);
   position: absolute;
   top: 0;
   opacity: 0;
+
+  transform: translate(0, 100%);
+  /* transition-property: transform; */
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .flex-hover:hover .overlay {
   opacity: 1;
+
+  transform: translate(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* animation-direction: alternate-reverse; */
+}
+
+.overflow-hover {
+  overflow: hidden;
 }
 
 .cards .text-action-style {
@@ -662,6 +696,8 @@ button:focus {
 .flex-container a:hover,
 .flex-container a:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .flex-cards:nth-last-child(-n + 3) {
@@ -816,6 +852,8 @@ button:focus {
 .team .social:focus {
   background-color: var(--font-second-color);
   fill: white;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .social {
@@ -882,6 +920,8 @@ button:focus {
   background-color: white;
   fill: var(--font-second-color);
   border: 1px solid var(--font-second-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .border-ul:hover {
@@ -944,6 +984,8 @@ button:focus {
 .footer a:active,
 .footer a:focus {
   color: var(--font-second-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-footer-color {
@@ -985,6 +1027,8 @@ button:focus {
 .social-footer:focus {
   background-color: var(--font-second-color);
   fill: white;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* display: inline-flex;
