--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,10 @@ button {
   transform: translate(0);
 }
 
+.flex-hover:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .overflow-hover {
   overflow: hidden;
 }
@@ -661,9 +665,9 @@ button {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.flex-container a:focus {
+/* .flex-container a:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+} */
 
 .flex-cards:nth-last-child(-n + 3) {
   margin-bottom: 0;
