--- a/css/styles.css
+++ b/css/styles.css
@@ -618,8 +618,10 @@ button {
   transform: translate(0);
 }
 
-.flex-hover:focus {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.flex-hover:focus .overlay {
+  opacity: 1;
+  transform: translate(0);
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .overflow-hover {
